parser/tests/bad/expr08-1.st
% 'boolean' expression must have type 'bool'
%   variable reference

const i: int := 1
if i then
  % empty
end if
